--- a/lottery/xv6/Makefile
+++ b/lottery/xv6/Makefile
@@ -177,6 +177,9 @@ UPROGS=\
 	_wc\
 	_zombie\
         _shutdown\
+	_processlist\
+	_timewithtickets\
+	_lotterytest\
 
 
 fs.img: mkfs README $(UPROGS)
