--- a/FAT/.vscode/settings.json
+++ b/FAT/.vscode/settings.json
@@ -3,6 +3,8 @@
         "xiosbase": "c",
         "fstream": "c",
         "iosfwd": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "system_error": "cpp",
+        "xlocale": "cpp"
     }
 }
