xv6 intro writecount

--- a/xv6intro/xv6/Makefile
+++ b/xv6intro/xv6/Makefile
@@ -177,7 +177,8 @@ UPROGS=\
 	_usertests\
 	_wc\
 	_zombie\
-        _shutdown\
+    _shutdown\
+	_testwritecount\
 
 
 fs.img: mkfs README $(UPROGS)
